# c_static_asserts

./: CMakeLists.txt  examples.yml  makefile  readme.md
.github/workflows/: examples.yml
examples/simple/: CMakeLists.txt
examples/simple/src/: main.c  packed.h
src/: static_assert.h
